actualizacion de lista eduardo

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <div><strong>Correo:</strong> Contacto@Lordgera.com</div>
             </li>
             <li>
-                <div><strong>Nombre:</strong> Alumno 2</div>
-                <div><strong>Semestre:</strong> 5</div>
-                <div><strong>Número de Control:</strong> 987654321</div>
-                <div><strong>Correo:</strong> alumno2@example.com</div>
+                <div><strong>Nombre:</strong> EDUARDO MENDEZ MIRANDA</div>
+                <div><strong>Semestre:</strong> 8</div>
+                <div><strong>Número de Control:</strong> 20510593</div>
+                <div><strong>Correo:</strong> COCOLIZO93@GMAIL.COM</div>
             </li>
             <li>
                 <div><strong>Nombre:</strong> Alumno 3</div>
