--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <div><strong>Correo:</strong> COCOLIZO93@GMAIL.COM</div>
             </li>
             <li>
-                <div><strong>Nombre:</strong> Alumno 3</div>
-                <div><strong>Semestre:</strong> 4</div>
-                <div><strong>Número de Control:</strong> 123123123</div>
-                <div><strong>Correo:</strong> alumno3@example.com</div>
+                <div><strong>Nombre:</strong> Daniel navarro verdugo</div>
+                <div><strong>Semestre:</strong> 8</div>
+                <div><strong>Número de Control:</strong> 20510399</div>
+                <div><strong>Correo:</strong> ventas@tecsolutionstap.com</div>
             </li>
             <li>
                 <div><strong>Nombre:</strong> Alumno 4</div>
