--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div><strong>Correo:</strong> COCOLIZO93@GMAIL.COM</div>
             </li>
             <li>
-                <div><strong>Nombre:</strong> Daniel navarro verdugo</div>
+                <div><strong>Nombre:</strong> Daniel navarro verdugoo</div>
                 <div><strong>Semestre:</strong> 8</div>
                 <div><strong>Número de Control:</strong> 20510399</div>
                 <div><strong>Correo:</strong> ventas@tecsolutionstap.com</div>
